Refactoring the DataVector class